@@ -58,6 +58,7 @@ import isTestedIllustratorVersion from "../common/isTestedIllustratorVersion"
 import initJSON from "../common/json2"
 import makeRgbColor from "../common/makeRgbColor"
 import ProgressWindow from "../common/ProgressWindow"
+import replaceSvgIds from "../common/replaceSvgIds"
 import roundTo from "../common/roundTo"
 import {
 	cleanHtmlText,
@@ -2408,52 +2409,12 @@ function main() {
 		}
 		svg = svg.replace(/<\?xml.*?\?>/, "")
 		svg = svg.replace("<svg", "<svg" + attr)
-		svg = replaceSvgIds(svg, settings.svg_id_prefix)
+		svg = replaceSvgIds(svg, settings.svg_id_prefix, (dupes) => {
+			warnOnce(
+				`Found duplicate SVG ${dupes.length == 1 ? "id" : "ids"}: ${dupes.sort().join(", ")}`
+			)
+		})
 		return svg
-	}
-
-	// Replace ids generated by Illustrator with ids that are as close as possible to
-	// the original names of objects in the document.
-	// prefix: optional namespace string (to avoid collisions with other ids on the page)
-	var svgIds // index of ids
-	function replaceSvgIds(svg, prefix) {
-		var idRxp = /id="([^"]+)_[0-9]+_"/g // matches ids generated by AI
-		var hexRxp = /_x([1-7][0-9A-F])_/g // matches char codes inserted by AI
-		var dupes = []
-		var msg
-		prefix = prefix || ""
-		svgIds = svgIds || {}
-		svg = svg.replace(idRxp, replaceId)
-		if (dupes.length > 0) {
-			msg = truncateString(dupes.sort().join(", "), 65, true)
-			warnOnce("Found duplicate SVG " + (dupes.length == 1 ? "id" : "ids") + ": " + msg)
-		}
-		return svg
-
-		function replaceId(str, id) {
-			var fixedId = id.replace(hexRxp, replaceHexCode)
-			var uniqId = uniqify(fixedId)
-			return 'id="' + prefix + uniqId + '" data-name="' + fixedId + '"'
-		}
-
-		function replaceHexCode(str, hex) {
-			return String.fromCharCode(parseInt(hex, 16))
-		}
-
-		// resolve id collisions by appending a string
-		function uniqify(origId) {
-			var id = origId,
-				n = 1
-			while (id in svgIds) {
-				n++
-				id = origId + "-" + n
-			}
-			if (n == 2) {
-				dupes.push(origId)
-			}
-			svgIds[id] = true
-			return id
-		}
 	}
 
 	// Finds layers that have an image type annotation in their names (e.g. :png)
