@@ -10,26 +10,21 @@ import { contains } from "./arrayUtils"
 export default function replaceSvgIds(
 	svg: string,
 	prefix: string = "",
-	knownIds: string[] = [],
-	onduplicate?: (dupes: string[]) => any
+	onduplicate?: (dupes: string[]) => void
 ) {
+	let ids: string[] = []
 	const idRxp = /id="([^"]+)_[0-9]+_"/g // matches IDs generated by AI
 	const hexRxp = /_x([1-7][0-9A-F])_/g // matches char codes inserted by AI
 	let dupes: string[] = []
-	let ids: string[] = knownIds
 
 	//@ts-expect-error replace does take a function argument
 	svg = svg.replace(idRxp, replaceId)
 
 	if (dupes.length > 0 && onduplicate) {
 		onduplicate(dupes)
-		// warnOnce(
-		// `Found duplicate SVG ${
-		// 		dupes.length == 1 ? "id" : "ids"
-		// 	}: ${truncateString(dupes.sort().join(", "), 65, true)}`
-		// )
 	}
-	return { svg, ids }
+
+	return svg
 
 	function replaceId(_: string, id: string): string {
 		//@ts-expect-error replace does take a function argument
