@@ -19,3 +19,4 @@
 - extracted `makeList()`
 - extracted `extendFontlist()`
 - extracted `formatError()`
+- extracted `replaceSvgIds()`
